--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Inter');
+
 :root{
-    --primary_color: #A084E8;
-    --secondary_color: #645CBB;
+    --primary_color: 160, 132, 232;
+    --secondary_color: 100, 92, 187;
     --terciary_color: #BFACE2;
 }
 
 .main_app{
     width: 100vw;
     height: 100vh;
+    font-family: 'Inter', sans-serif;
 }
