--- a/src/components/SlideBar/SlideBar.css
+++ b/src/components/SlideBar/SlideBar.css
@@ -9,11 +9,12 @@
     gap: 15px;
     padding: 0 15px;
     font-size: 18px;
+    overflow: scroll;
 }
 
 .slide_bar_item{
-    background-color: var(--primary_color);
-    color: var(--secondary_color);
+    background-color: rgba(var(--primary_color), 0.3);
+    color: rgb(var(--primary_color));
     border-radius: 10px;
     padding: 2px 15px;
 }
