--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,69 @@
     height: 100vh;
     font-family: 'Inter', sans-serif;
 }
+
+#btn-outline-primary{
+    --bs-btn-color: rgb(var(--primary_color));
+    --bs-btn-border-color: rgb(var(--primary_color));
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: rgb(var(--primary_color));
+    --bs-btn-hover-border-color: rgb(var(--primary_color));
+    --bs-btn-focus-shadow-rgb: 25, 135, 84;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: rgb(var(--primary_color));
+    --bs-btn-active-border-color: rgb(var(--primary_color));
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: rgb(var(--primary_color));
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: rgb(var(--primary_color));
+    --bs-gradient: none;
+}
+
+#btn-primary{
+    --bs-btn-color: #fff;
+    --bs-btn-bg: rgba(var(--primary_color), 0.8);
+    --bs-btn-border-color: rgb(var(--primary_color));
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: rgba(var(--primary_color), 0.9);
+    --bs-btn-hover-border-color: rgba(var(--primary_color), 0.8);
+    --bs-btn-focus-shadow-rgb: 225, 83, 97;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: rgba(var(--primary_color), 0.9);
+    --bs-btn-active-border-color: rgba(var(--primary_color), 0.9);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: rgba(var(--primary_color), 0.9);
+    --bs-btn-disabled-border-color: rgba(var(--primary_color), 0.8);
+}
+
+#btn-primary-lighter{
+    --bs-btn-color: #fff;
+    --bs-btn-bg: rgba(var(--primary_color), 0.6);
+    --bs-btn-border-color: rgb(var(--primary_color));
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: rgba(var(--primary_color), 0.7);
+    --bs-btn-hover-border: none;
+    --bs-btn-focus-shadow-rgb: 225, 83, 97;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: rgba(var(--primary_color), 0.7);
+    --bs-btn-active-border-color: rgba(var(--primary_color), 0.7);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: rgba(var(--primary_color), 0.97);
+    --bs-btn-disabled-border-color: rgba(var(--primary_color), 0.6);
+}
+
+#form-control-primary{
+    --bs-focus-ring-color: rgba(var(--primary_color), 0.3);
+    border: 1px solid rgba(var(--secondary_color), 0.5);
+    color: rgb(var(--primary_color));
+}
+
+#form-control-primary::placeholder{
+    color: rgba(var(--primary_color), 0.8);
+    letter-spacing: 1px;
+}
+
+#form-control-primary:focus{
+    border-color: #fff;
+}
