--- a/src/components/ExcercisesContainer/ExcercisesContainer.css
+++ b/src/components/ExcercisesContainer/ExcercisesContainer.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .excercise_item_info{
@@ -48,7 +49,7 @@
     height: 100%;
     width: calc(var(--individual_item_height) + 30px);
     background-color: var(--background_color);
-    border-radius: 30px 0 0 30px;
+    border-radius: 30px 10px 10px 30px;
     position: absolute;
     padding: 10px;
     top: 0;
@@ -58,7 +59,7 @@
 .excercise_item_img img{
     width: 100%;
     height: 100%;
-    border-radius: 30px 0 0 30px;
+    border-radius: 12px;
 }
 
 .excercises_navigation{
@@ -84,6 +85,7 @@
     font-size: 16px;
     border: none;
     padding: 5px 10px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .excercises_navigation_individual_button:hover{
