Mejorados los filtros y ya empieza la pagina de ejercicios individual

--- a/src/pages/IndividualExcercise/IndividualExcercise.css
+++ b/src/pages/IndividualExcercise/IndividualExcercise.css
@@ -1,3 +1,7 @@
 .individual_excercise{
-    padding-top: var(--nav_bar_height);
+    padding-top: calc(var(--nav_bar_height) + 5px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
 }
