--- a/src/components/ExcercisesContainer/ExcercisesContainer.css
+++ b/src/components/ExcercisesContainer/ExcercisesContainer.css
@@ -26,6 +26,11 @@
     gap: 8px;
 }
 
+.excercise_item_name{
+    color: inherit;
+    text-decoration: none;
+}
+
 .excercise_item_belt{
     display: flex;
     gap: 7px;
@@ -36,6 +41,10 @@
     color: rgba(var(--secondary_color), 0.5);
     border: 2px solid rgba(var(--secondary_color), 0.5);
     padding: 1px 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .excercise_item_target{
@@ -43,6 +52,10 @@
     color: rgb(var(--terciary_color));
     border: 2px solid rgb(var(--terciary_color));
     padding: 1px 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .excercise_item_img{
