--- a/src/components/BreadCrumb/BreadCrumb.css
+++ b/src/components/BreadCrumb/BreadCrumb.css
@@ -1,9 +1,16 @@
 #breadcrumb{
     padding: 0 12px;
     margin: 0;
+    align-self: flex-start;
+    margin: 0;
+}
+
+#breadcrumb_no_margin{
+    margin: 0;
 }
 
 #breadcrumb_individual_item{
     color: rgb(var(--primary_color));
     text-decoration: none;
+    font-size: 20px;
 }
