--- a/src/pages/IndividualExcercise/IndividualExcercise.css
+++ b/src/pages/IndividualExcercise/IndividualExcercise.css
@@ -1,7 +1,33 @@
 .individual_excercise{
-    padding-top: calc(var(--nav_bar_height) + 5px);
+    padding-top: var(--nav_bar_height);
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 5px;
+    align-items: center;
+}
+
+.individual_excercise_title{
+    width: 100%;
+    color: rgb(var(--secondary_color));
+    font-size: 30px;
+    text-align: left;
+    padding: 0 12px;
+    margin: 10px 0 0 0;
+}
+
+.individual_excercise_background{
+    width: 100%;
+    padding: 30px;
+}
+
+.individual_excercise_background img{
+    width: 100%;
+    padding: 20px;
+    height: auto;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 10px;
+}
+
+.individual_excercise_container{
 }
